@@ -49,11 +49,11 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.languagetool.server.ServerTools.getHttpReferrer;
-import static org.languagetool.server.ServerTools.getHttpUserAgent;
+import static org.languagetool.server.ServerTools.*;
 
 /**
  * @since 3.4
@@ -64,6 +64,8 @@ abstract class TextChecker {
   private static final int PINGS_CLEAN_MILLIS = 60 * 1000;  // internal pings database will be cleaned this often
   private static final int PINGS_MAX_SIZE = 5000;
   private static final String SPAN_NAME_PREFIX = "/v2/check-";
+  private static final Pattern COMMA_WHITESPACE_PATTERN = Pattern.compile(",\\s*");
+  static final AbTestService AB_TEST_SERVICE = LocalAbTestService.getAbTestService();
 
   protected abstract void setHeaders(HttpExchange httpExchange);
   protected abstract String getResponse(AnnotatedText text, Language language, DetectedLanguage lang, Language motherTongue, List<CheckResults> matches,
@@ -79,7 +81,6 @@ abstract class TextChecker {
   protected abstract List<String> getDisabledRuleIds(Map<String, String> parameters);
     
   protected static final int CONTEXT_SIZE = 40; // characters
-  protected static final int NUM_PIPELINES_PER_SETTING = 3; // for prewarming
 
   protected final HTTPServerConfig config;
 
@@ -99,6 +100,81 @@ abstract class TextChecker {
 
   private long pingsCleanDateMillis = System.currentTimeMillis();
   PipelinePool pipelinePool; // mocked in test -> package-private / not final
+
+  /**
+   * List of usernames for A/B testing with restricted rules.
+   * Populated from LT_TEST_ONLY_USERS environment variable.
+   * Format: comma-separated list of usernames
+   */
+  private final static List<String> onlyTestUsers;
+
+  /**
+   * List of rule IDs enabled for restricted rules A/B testing.
+   * Populated from LT_TEST_ONLY_RULES environment variable.
+   * Format: comma-separated list of rule IDs
+   */
+  private final static List<String> onlyTestRules;
+
+  /**
+   * List of languages enabled for restricted rules A/B testing.
+   * Populated from LT_TEST_ONLY_LANGUAGES environment variable.
+   * Format: comma-separated list of language codes
+   */
+  private final static List<String> onlyTestLanguages;
+
+  /**
+   * List of clients enabled for restricted rules A/B testing.
+   * Populated from LT_TEST_ONLY_CLIENTS environment variable.
+   * Format: comma-separated list of client identifiers
+   */
+  private final static List<String> onlyTestClients;
+
+  static {
+    String onlyUsersEnv = System.getenv("LT_TEST_ONLY_USERS");
+    if (onlyUsersEnv == null || onlyUsersEnv.trim().isEmpty()) {
+      onlyTestUsers = Collections.emptyList();
+    } else {
+      onlyTestUsers = Arrays.stream(onlyUsersEnv.split(","))
+        .map(String::trim)
+        .filter(s -> !s.isEmpty())
+        .collect(Collectors.toList());
+    }
+
+    String onlyRulesEnv = System.getenv("LT_TEST_ONLY_RULES");
+    if (onlyRulesEnv == null || onlyRulesEnv.trim().isEmpty()) {
+      onlyTestRules = Collections.emptyList();
+    } else {
+      onlyTestRules = Arrays.stream(onlyRulesEnv.split(","))
+        .map(String::trim)
+        .filter(s -> !s.isEmpty())
+        .collect(Collectors.toList());
+    }
+
+    String onlyLanguagesEnv = System.getenv("LT_TEST_ONLY_LANGUAGES");
+    if (onlyLanguagesEnv == null || onlyLanguagesEnv.trim().isEmpty()) {
+      onlyTestLanguages = Collections.emptyList();
+    } else {
+      onlyTestLanguages = Arrays.stream(onlyLanguagesEnv.split(","))
+        .map(String::trim)
+        .filter(s -> !s.isEmpty())
+        .collect(Collectors.toList());
+    }
+
+    String onlyClientsEnv = System.getenv("LT_TEST_ONLY_CLIENTS");
+    if (onlyClientsEnv == null || onlyClientsEnv.trim().isEmpty()) {
+      onlyTestClients = Collections.emptyList();
+    } else {
+      onlyTestClients = Arrays.stream(onlyClientsEnv.split(","))
+        .map(String::trim)
+        .filter(s -> !s.isEmpty())
+        .collect(Collectors.toList());
+    }
+
+    if (!onlyTestRules.isEmpty()) {
+      log.info("Initialized A/B test restrictions - users: {}, rules: {}, languages: {}, clients: {}",
+        onlyTestUsers, onlyTestRules, onlyTestLanguages, onlyTestClients);
+    }
+  }
 
   TextChecker(HTTPServerConfig config, boolean internalServer, Queue<Runnable> workQueue, RequestCounter reqCounter) {
     this.config = config;
@@ -164,8 +240,10 @@ abstract class TextChecker {
     pipelinePool = new PipelinePool(config, cache, internalServer);
     if (config.isPipelinePrewarmingEnabled()) {
       log.info("Prewarming pipelines...");
+      long start = System.currentTimeMillis();
       prewarmPipelinePool();
-      log.info("Prewarming finished.");
+      long end = System.currentTimeMillis();
+      log.info("Prewarming finished in {} seconds.", (end - start) / 1000.0);
     }
     if (config.getAbTest() != null) {
       UserConfig.enableABTests();
@@ -187,57 +265,40 @@ abstract class TextChecker {
   private void prewarmPipelinePool() {
     // setting + number of pipelines
     // typical addon settings at the moment (2018-11-05)
-    Map<PipelineSettings, Integer> prewarmSettings = new HashMap<>();
+    List<PipelineSettings> prewarmSettings = new ArrayList<>();
     List<Language> prewarmLanguages = new ArrayList<>();
     if (config.preferredLanguages.isEmpty()) {
       prewarmLanguages.addAll(Stream.of(
                       "de-DE", "en-US", "en-GB", "pt-BR", "ru-RU", "es", "it", "fr", "pl-PL", "uk-UA")
               .map(Languages::getLanguageForShortCode)
-              .collect(Collectors.toList()));
+              .toList());
     } else {
-      config.preferredLanguages.forEach(s -> {
-        prewarmLanguages.add(Languages.getLanguageForShortCode(s));
-      });
+      config.preferredLanguages.forEach(s -> prewarmLanguages.add(Languages.getLanguageForShortCode(s)));
     }
 
-    List<String> addonDisabledRules = Collections.singletonList("WHITESPACE_RULE");
-    List<JLanguageTool.Mode> addonModes = Arrays.asList(JLanguageTool.Mode.TEXTLEVEL_ONLY, JLanguageTool.Mode.ALL_BUT_TEXTLEVEL_ONLY);
     UserConfig user = new UserConfig();
+
     for (Language language : prewarmLanguages) {
-      // add-on uses picky mode since 2021-01-20
-      for (JLanguageTool.Mode mode : addonModes) {
-        QueryParams params = new QueryParams(Collections.emptyList(), Collections.emptyList(), addonDisabledRules,
+        QueryParams params = new QueryParams(Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
           Collections.emptyList(), Collections.emptyList(), false, true,
-          true, true, Premium.isPremiumVersion(), false, mode, JLanguageTool.Level.PICKY, null);
-        PipelineSettings settings = new PipelineSettings(language, null, params, config.globalConfig, user);
-        prewarmSettings.put(settings, NUM_PIPELINES_PER_SETTING);
-
-        PipelineSettings settingsMotherTongueEqual = new PipelineSettings(language, language, params, config.globalConfig, user);
-        PipelineSettings settingsMotherTongueEnglish = new PipelineSettings(language,
-          Languages.getLanguageForName("English"), params, config.globalConfig, user);
-        prewarmSettings.put(settingsMotherTongueEqual, NUM_PIPELINES_PER_SETTING);
-        prewarmSettings.put(settingsMotherTongueEnglish, NUM_PIPELINES_PER_SETTING);
-      }
+          true, true, Premium.isPremiumVersion(), false, JLanguageTool.Mode.ALL, JLanguageTool.Level.PICKY, null);
+        PipelineSettings settingsEnglishWithMotherTongue = new PipelineSettings(Languages.getLanguageForShortCode("en-US"), language, params, config.globalConfig, user);
+        prewarmSettings.add(settingsEnglishWithMotherTongue);
+        PipelineSettings settingsMotherTongueEnglish = new PipelineSettings(language, Languages.getLanguageForName("English"), params, config.globalConfig, user);
+        prewarmSettings.add(settingsMotherTongueEnglish);
     }
-    try {
-      for (Map.Entry<PipelineSettings, Integer> prewarmSetting : prewarmSettings.entrySet()) {
-          int numPipelines = prewarmSetting.getValue();
-          PipelineSettings setting = prewarmSetting.getKey();
 
-          // request n pipelines first, return all afterwards -> creates multiple for same setting
-          List<Pipeline> pipelines = new ArrayList<>();
-          for (int i = 0; i < numPipelines; i++) {
-            Pipeline p = pipelinePool.getPipeline(setting);
-            p.check("LanguageTool");
-            pipelines.add(p);
-          }
-          for (Pipeline p : pipelines) {
-            pipelinePool.returnPipeline(setting, p);
-          }
+    log.info("Prewarming {} pipelines", prewarmSettings.size());
+
+    prewarmSettings.parallelStream().forEach(setting -> {
+      try {
+        Pipeline pipeline = pipelinePool.getPipeline(setting);
+        pipeline.check("LanguageTool");
+        pipelinePool.returnPipeline(setting, pipeline);
+      } catch (Exception e) {
+        throw new RuntimeException("Error while prewarming pipeline", e);
       }
-    } catch (Exception e) {
-      throw new RuntimeException("Error while prewarming pipelines", e);
-    }
+    });
   }
 
   void shutdownNow() {
@@ -245,11 +306,61 @@ abstract class TextChecker {
     RemoteRule.shutdown();
   }
 
+  private boolean isOptInThirdPartyAI(UserLimits limits, Map<String, String> params, HTTPServerConfig config) {
+    boolean optInThirdPartyAI = false;
+    if (limits.getAccount() != null) {
+      optInThirdPartyAI = limits.getAccount().isOpt_in_3rd_party_ai_grammar_checker();
+    } else if (params.containsKey("optInThirdPartyAI")) {
+      optInThirdPartyAI = "true".equals(params.get("optInThirdPartyAI"));
+    } else {
+      optInThirdPartyAI = config.getDefaultThirdPartyAI();
+    }
+    return optInThirdPartyAI;
+  }
+
+  private boolean shouldRunRestrictedRulesTest(Map<String, String> params, String agent, Language lang, List<String> abTest) {
+    String username = params.getOrDefault("username", "");
+    return (onlyTestUsers.contains(username) || (abTest != null && abTest.contains("only"))) &&
+      onlyTestLanguages.contains(lang.getShortCodeWithCountryAndVariant()) &&
+      onlyTestClients.contains(agent);
+  }
+
   void checkText(AnnotatedText aText, HttpExchange httpExchange, Map<String, String> params, ErrorRequestLimiter errorRequestLimiter,
                  String remoteAddress) throws Exception {
     checkParams(params);
     long timeStart = System.currentTimeMillis();
-    UserLimits limits = ServerTools.getUserLimits(params, config);
+    UserLimits limits = ServerTools.getUserLimits(params, config, httpExchange.getRequestHeaders());
+
+    if (Premium.isPremiumStatusCheck(aText)) {
+      Language premiumStatusCheckLang = Languages.getLanguageForShortCode("en-US");
+      List<RuleMatch> matches = new ArrayList<>();
+      if (limits.hasPremium() || config.isPremiumAlways()) {
+        matches.add(new RuleMatch(new Rule() {
+          @Override
+          public String getId() {
+            return "PREMIUM_FAKE_RULE";
+          }
+
+          @Override
+          public String getDescription() {
+            return "PREMIUM_FAKE_RULE";
+          }
+
+          @Override
+          public RuleMatch[] match(AnalyzedSentence sentence) throws IOException {
+            return RuleMatch.EMPTY_ARRAY;
+          }
+        }, null,0,1,""));
+      }
+      DetectedLanguage detectedLanguage = new DetectedLanguage(premiumStatusCheckLang, premiumStatusCheckLang, 0.99999076F, "ngram");
+      int compactMode = Integer.parseInt(params.getOrDefault("c", "0"));
+      String response = getResponse(aText, premiumStatusCheckLang, detectedLanguage, premiumStatusCheckLang, Collections.singletonList(new CheckResults(matches, Collections.emptyList())), Collections.emptyList(), null, compactMode,
+        !limits.hasPremium(), JLanguageTool.Mode.ALL);
+      setHeaders(httpExchange);
+      httpExchange.sendResponseHeaders(HttpURLConnection.HTTP_OK, response.getBytes(ENCODING).length);
+      httpExchange.getResponseBody().write(response.getBytes(ENCODING));
+      return;
+    }
 
     String requestId = httpExchange.getRequestHeaders().getFirst("X-Request-ID");
 
@@ -354,24 +465,7 @@ abstract class TextChecker {
         ", HTTP user agent: " + getHttpUserAgent(httpExchange) + ", referrer: " + getHttpReferrer(httpExchange));
     }
 
-    String abTest = null;
-    if (agent != null && config.getAbTestClients() != null && config.getAbTestClients().matcher(agent).matches()) {
-      boolean testRolledOut;
-      // partial rollout; deterministic if textSessionId given to make testing easier
-      if (textSessionId != null) {
-        testRolledOut = textSessionId % 100 < config.getAbTestRollout();
-      } else {
-        testRolledOut = random.nextInt(100) < config.getAbTestRollout();
-      }
-      if (testRolledOut) {
-        abTest = config.getAbTest();
-      }
-    }
-    String paramActivatedAbTest = params.get("abtest");
-    if (paramActivatedAbTest != null && paramActivatedAbTest.equals(config.getAbTest())) {
-      abTest = paramActivatedAbTest;
-    }
-    
+    List<String> abTest = AB_TEST_SERVICE.getActiveAbTestForClient(params, config);
 
     boolean enableHiddenRules = "true".equals(params.get("enableHiddenRules"));
     if (limits.hasPremium()) {
@@ -393,18 +487,17 @@ abstract class TextChecker {
     Language lang = detLang.getGivenLanguage();
 
     List<Rule> userRules = TelemetryProvider.INSTANCE.createSpan(SPAN_NAME_PREFIX + "GetUserRules", Attributes.empty(), () -> getUserRules(limits, lang, finalDictGroups));
-    boolean isMultiLangEnabled = false;
-    //only enable this feature with parameter
-    if (params.get("enableMultiLanguageChecks") != null && params.get("enableMultiLanguageChecks").equals("true")) {
-      isMultiLangEnabled = true;
-    }
-    
+    String ltAgent = params.getOrDefault("useragent", "unknown");
+    Pattern trustedSourcesPattern = config.getTrustedSources();
+    boolean trustedSource = trustedSourcesPattern == null || (limits.hasPremium() || trustedSourcesPattern.matcher(ltAgent).matches());
+    boolean optInThirdPartyAI = isOptInThirdPartyAI(limits, params, config);
+
     UserConfig userConfig =
       new UserConfig(dictWords, userRules,
                      getRuleValues(params), config.getMaxSpellingSuggestions(),
                      limits.getPremiumUid(), dictName, limits.getDictCacheSize(),
                      null, filterDictionaryMatches, abTest, textSessionId,
-                     !limits.hasPremium() && enableHiddenRules, preferredLangs);
+                     !limits.hasPremium() && enableHiddenRules, preferredLangs, trustedSource, optInThirdPartyAI, limits.hasPremium(), limits.getJwtContent().claims());
 
     //print("Check start: " + text.length() + " chars, " + langParam);
 
@@ -437,7 +530,7 @@ abstract class TextChecker {
     boolean useEnabledOnly = "yes".equals(params.get("enabledOnly")) || "true".equals(params.get("enabledOnly"));
     List<Language> altLanguages = new ArrayList<>();
     if (params.get("altLanguages") != null) {
-      String[] altLangParams = params.get("altLanguages").split(",\\s*");
+      String[] altLangParams = COMMA_WHITESPACE_PATTERN.split(params.get("altLanguages"));
       for (String langCode : altLangParams) {
         Language altLang = parseLanguage(langCode);
         altLanguages.add(altLang);
@@ -448,10 +541,21 @@ abstract class TextChecker {
       }
     }
     List<String> enabledRules = getEnabledRuleIds(params);
-
     List<String> disabledRules = getDisabledRuleIds(params);
     List<CategoryId> enabledCategories = getCategoryIds("enabledCategories", params);
     List<CategoryId> disabledCategories = getCategoryIds("disabledCategories", params);
+
+
+    if (shouldRunRestrictedRulesTest(params, agent, lang, abTest)) {
+      log.info("Running test with restricted rules for user: {}, language: {}, client: {}",
+        params.getOrDefault("username", ""), lang.getShortCodeWithCountryAndVariant(), agent);
+      useEnabledOnly = true;
+      enabledRules = onlyTestRules;
+      // need to clear these settings, leads to conflict with useEnabledOnly otherwise
+      disabledRules = Collections.emptyList();
+      disabledCategories = Collections.emptyList();
+    }
+
 
     if ((disabledRules.size() > 0 || disabledCategories.size() > 0) && useEnabledOnly) {
       ServerMetricsCollector.getInstance().logRequestError(ServerMetricsCollector.RequestErrorType.INVALID_REQUEST);
@@ -490,12 +594,19 @@ abstract class TextChecker {
     } else {
       toneTags.add(ToneTag.ALL_WITHOUT_GOAL_SPECIFIC); //No toneTags param in request
     }
+
+    String rIp = LanguageToolHttpHandler.getRealRemoteAddressOrNull(httpExchange,config);
+    if (rIp != null && mode.equals(JLanguageTool.Mode.ALL_BUT_TEXTLEVEL_ONLY)) {
+      log.info("L-IP{}:{}", lang.getShortCodeWithCountryAndVariant(), rIp);
+    }
+
     String callback = params.get("callback");
     // allowed to log input on errors?
     boolean inputLogging = !params.getOrDefault("inputLogging", "").equals("no");
+    boolean premiumStatus = limits.hasPremium();
     QueryParams qParams = new QueryParams(altLanguages, enabledRules, disabledRules,
       enabledCategories, disabledCategories, useEnabledOnly,
-      useQuerySettings, allowIncompleteResults, enableHiddenRules, limits.getPremiumUid() != null && limits.hasPremium(), enableTempOffRules, mode, level, toneTags, callback, inputLogging);
+      useQuerySettings, allowIncompleteResults, enableHiddenRules, premiumStatus, enableTempOffRules, mode, level, toneTags, callback, inputLogging);
 
     int textSize = length;
     List<CheckResults> ruleMatchesSoFar = Collections.synchronizedList(new ArrayList<>());
@@ -622,33 +733,6 @@ abstract class TextChecker {
       hiddenMatches.addAll(ResultExtender.getAsHiddenMatches(allMatches, premiumMatches));
     }
 
-    //### Start multiLangPart
-    //TODO: implement recheck of ignoreRanges
-    if (isMultiLangEnabled) {
-      log.debug("Not implemented yet");
-//      long startTimeRecheck = System.currentTimeMillis();
-//      Map<String, List<Range>> rangesOrderedByLanguage = new HashMap<>();
-//      res.forEach(checkResults -> {
-//        checkResults.getIgnoredRanges().forEach(range -> {
-//          List<Range> sentenceRanges = rangesOrderedByLanguage.getOrDefault(range.getLang(), new ArrayList<>());
-//          sentenceRanges.add(range);
-//          rangesOrderedByLanguage.put(range.getLang(), sentenceRanges);
-//        });
-//      });
-//      rangesOrderedByLanguage.forEach((shortLangCode, ranges) -> {
-//        Language rangeLanguage = Languages.getLanguageForShortCode(shortLangCode);
-//        StringBuilder languageTextBuilder = new StringBuilder();
-//        ranges.forEach(range -> {
-//          String text = range.getAnalyzedSentence().getText().trim() + " ";
-//          languageTextBuilder.append(text);
-//        });
-//        AnnotatedText finalTextToCheckAgain = new AnnotatedTextBuilder().addText(languageTextBuilder.toString().trim()).build();
-//      });
-//      long endTimeRecheck = System.currentTimeMillis();
-//      log.trace("Time needed for recheck other languages: {}", (endTimeRecheck - startTimeRecheck) / 1000f);
-    }
-    //### End multiLangPart
-
     int compactMode = Integer.parseInt(params.getOrDefault("c", "0"));
     String response = getResponse(aText, lang, detLang, motherTongue, res, hiddenMatches, incompleteResultReason, compactMode,
       limits.getPremiumUid() == null, qParams.mode);
@@ -697,55 +781,62 @@ abstract class TextChecker {
             + ", h:" + reqCounter.getHandleCount() + ", dH:" + reqCounter.getDistinctIps()
             + ", r:" + reqCounter.getRequestCount()
             + ", m:" + ServerTools.getModeForLog(mode) + skipLimits
-            + ", premium: " + (limits.getPremiumUid() != null && limits.hasPremium())
+            + ", premium: " + premiumStatus
             //+ ", temporaryPremiumDisabledRuleMatches: " + temporaryPremiumDisabledRuleMatch //TODO activate if used
             //+ ", temporaryPremiumDisabledRuleMatchedIds: " + temporaryPremiumDisabledRuleMatchedIds //TODO activate if used
             + (limits.getPremiumUid() != null ? ", uid:" + limits.getPremiumUid() : ""));
-    if (limits.getPremiumUid() != null && limits.getPremiumUid() == 1456) { // Fernando Moon, fernando.moon@eggbun-edu.com - allows logging text in exchange for free API access (see email 2018-05-31):
-      log.info("Eggbun input: " + aText.getPlainText().replace("\n", "\\n").replace("\r", "\\r"));
-    }
     if (premiumMatchRuleIds.size() > 0) {
       for (String premiumMatchRuleId : premiumMatchRuleIds) {
         log.info("premium:" + lang.getShortCodeWithCountryAndVariant() + ":" + premiumMatchRuleId);
       }
     }
 
-    if (!Premium.isPremiumStatusCheck(aText)) { // exclude status checks from add-on from metrics
-      ServerMetricsCollector.getInstance().logCheck(
-        lang, computationTime, textSize, matchCount, mode);
 
-      if (!config.isSkipLoggingChecks()) {
-        // NOTE: Java/DB (not sure) can't keep up with logging the volume of new entries we've reached,
-        // so we limit it to enterprise customers where we actually pay attention to the request limits
-        if (limits.getRequestsPerDay() != null) {
-          DatabaseCheckLogEntry logEntry = new DatabaseCheckLogEntry(userId, agentId, logServerId, textSize, matchCount,
-            lang, detLang.getDetectedLanguage(), computationTime, textSessionId, mode.toString());
-          databaseLogger.log(logEntry);
-        }
+    ServerMetricsCollector.getInstance().logCheck(
+      lang, computationTime, textSize, matchCount, mode);
+
+    if (!config.isSkipLoggingChecks()) {
+      // NOTE: Java/DB (not sure) can't keep up with logging the volume of new entries we've reached,
+      // so we limit it to enterprise customers where we actually pay attention to the request limits
+      if (limits.getRequestsPerDay() != null) {
+        DatabaseCheckLogEntry logEntry = new DatabaseCheckLogEntry(userId, agentId, logServerId, textSize, matchCount,
+          lang, detLang.getDetectedLanguage(), computationTime, textSessionId, mode.toString());
+        databaseLogger.log(logEntry);
       }
+    }
 
-      if (databaseLogger.isLogging()) {
-        if (System.currentTimeMillis() - pingsCleanDateMillis > PINGS_CLEAN_MILLIS && pings.size() < PINGS_MAX_SIZE) {
-          log.info("Cleaning pings DB (" + pings.size() + " items)");
-          pings.clear();
-          pingsCleanDateMillis = System.currentTimeMillis();
-        }
-        if (agentId != null && userId != null) {
-          DatabasePingLogEntry ping = new DatabasePingLogEntry(agentId, userId);
-          if (!pings.contains(ping)) {
-            databaseLogger.log(ping);
-            if (pings.size() >= PINGS_MAX_SIZE) {
-              // prevent pings taking up unlimited amounts of memory
-              log.warn("Pings DB has reached max size: " + pings.size());
-            } else {
-              pings.add(ping);
-            }
+    if (databaseLogger.isLogging()) {
+      if (System.currentTimeMillis() - pingsCleanDateMillis > PINGS_CLEAN_MILLIS && pings.size() < PINGS_MAX_SIZE) {
+        log.info("Cleaning pings DB (" + pings.size() + " items)");
+        pings.clear();
+        pingsCleanDateMillis = System.currentTimeMillis();
+      }
+      if (agentId != null && userId != null) {
+        DatabasePingLogEntry ping = new DatabasePingLogEntry(agentId, userId);
+        if (!pings.contains(ping)) {
+          databaseLogger.log(ping);
+          if (pings.size() >= PINGS_MAX_SIZE) {
+            // prevent pings taking up unlimited amounts of memory
+            log.warn("Pings DB has reached max size: " + pings.size());
+          } else {
+            pings.add(ping);
           }
         }
       }
-
     }
+  }
 
+  public boolean checkerQueueAlmostFull() {
+    if (this.executorService instanceof ThreadPoolExecutor) {
+      ThreadPoolExecutor threadPoolExecutor = (ThreadPoolExecutor) this.executorService;
+      int maxQueueSize = config.getTextCheckerQueueSize();
+      int queuesize = threadPoolExecutor.getQueue().size();
+      if (queuesize > maxQueueSize/2) { //should not happen in normal cases (workQueue.size() == config.getTextCheckerQueueSize())
+        log.warn("TextChecker queue is almost full requests in queue: {} active request: {}", queuesize, threadPoolExecutor.getActiveCount());
+        return true;
+      }
+    }
+    return false;
   }
 
   @NotNull
@@ -760,8 +851,8 @@ abstract class TextChecker {
     return ruleMatchCount;
   }
 
-  private Map<String, Integer> getRuleValues(Map<String, String> parameters) {
-    Map<String, Integer> ruleValues = new HashMap<>();
+  private Map<String, Object[]> getRuleValues(Map<String, String> parameters) {
+    Map<String, Object[]> ruleValues = new HashMap<>();
     String parameterString = parameters.get("ruleValues");
     if (parameterString == null) {
       return ruleValues;
@@ -769,7 +860,8 @@ abstract class TextChecker {
     String[] pairs = parameterString.split(",");
     for (String pair : pairs) {
       String[] ruleAndValue  = pair.split(":");
-      ruleValues.put(ruleAndValue[0], Integer.parseInt(ruleAndValue[1]));
+      Object[] objects = RuleOption.stringToObjects(ruleAndValue[1]);
+      ruleValues.put(ruleAndValue[0], objects);
     }
     return ruleValues;
   }
@@ -824,36 +916,6 @@ abstract class TextChecker {
     } else {
       List<CheckResults> res = new ArrayList<>();
       res.addAll(getPipelineResults(aText, lang, motherTongue, params, userConfig, listener));
-//      NOTE: Not needed anymore. The "multilingual" parameter is not used.
-//      if (preferredLangs.size() < 2 || parameters.get("multilingual") == null || parameters.get("multilingual").equals("false")) {
-//        res.addAll(getPipelineResults(aText, lang, motherTongue, params, userConfig, listener));
-//      } 
-//      else {
-//        // support for multilingual texts:
-//        try {
-//          Language mainLang = getLanguageVariantForCode(detLang.getDetectedLanguage().getShortCode(), preferredVariants);
-//          List<Language> secondLangs = new ArrayList<>();
-//          for (String preferredLangCode : preferredLangs) {
-//            if (!preferredLangCode.equals(mainLang.getShortCode())) {
-//              secondLangs.add(getLanguageVariantForCode(preferredLangCode, preferredVariants));
-//              break;
-//            }
-//          }
-//          LanguageAnnotator annotator = new LanguageAnnotator();
-//          List<FragmentWithLanguage> fragments = annotator.detectLanguages(aText.getPlainText(), mainLang, secondLangs);
-//          List<Language> langs = new ArrayList<>();
-//          langs.add(mainLang);
-//          langs.addAll(secondLangs);
-//          Map<Language, AnnotatedTextBuilder> lang2builder = getBuilderMap(fragments, new HashSet<>(langs));
-//          for (Map.Entry<Language, AnnotatedTextBuilder> entry : lang2builder.entrySet()) {
-//            res.addAll(getPipelineResults(entry.getValue().build(), entry.getKey(), motherTongue, params, userConfig, listener));
-//          }
-//        } catch (Exception e) {
-//          log.error("Problem with multilingual mode (preferredLangs=" + preferredLangs+ ", preferredVariants=" + preferredVariants + "), " +
-//            "falling back to single language.", e);
-//          res.addAll(getPipelineResults(aText, lang, motherTongue, params, userConfig, listener));
-//        }
-//      }
       return res;
     }
   }
